projetGL/src/test/deca/codegen/invalid/test_modulo_zero_1.deca
// Description :
//    Test de l'opération modulo avec un diviseur nul résultant d'une opération
//
// Resultats:
//    Erreur : Modulo par zero

{
    2%0;
}